--- a/css/style.css
+++ b/css/style.css
@@ -1306,6 +1306,14 @@ input[type=radio].visually-hidden {
   justify-content: space-between;
 }
 
+.form-elements__select-style-multiple {
+  box-sizing: border-box;
+  min-height: 100px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
 .form-elements__select-style-name {
   box-sizing: border-box;
   width: 326px;
@@ -1329,6 +1337,13 @@ input[type=radio].visually-hidden {
 }
 
 .form-elements__select-blocked {
+  width: 326px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
+.form-elements__select-multiple {
   width: 326px;
   box-sizing: border-box;
   display: flex;
@@ -1359,8 +1374,18 @@ input[type=radio].visually-hidden {
   margin-bottom: 10px;
 }
 
+.form-elements__select-multiple-label {
+  color: rgba(24, 25, 32, 0.5);
+  font-size: 13px;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
 .form-elements__field-ordinary-select1 {
   height: 50px;
+  width: 326px;
+  box-sizing: border-box;
   margin-bottom: 10px;
   border-style: solid;
   border-color: rgba(24, 25, 32, 0.1);
@@ -1377,6 +1402,8 @@ input[type=radio].visually-hidden {
 
 .form-elements__field-ordinary-select2 {
   height: 50px;
+  width: 326px;
+  box-sizing: border-box;
   margin-bottom: 10px;
   border-style: solid;
   border-color: rgba(24, 25, 32, 0.1);
@@ -1401,6 +1428,8 @@ input[type=radio].visually-hidden {
 
 .form-elements__field-icon-select1 {
   height: 50px;
+  width: 326px;
+  box-sizing: border-box;
   margin-bottom: 10px;
   border-style: solid;
   border-color: rgba(24, 25, 32, 0.1);
@@ -1417,6 +1446,7 @@ input[type=radio].visually-hidden {
 
 .form-elements__field-icon-select2 {
   height: 50px;
+  width: 326px;
   margin-bottom: 10px;
   border-style: solid;
   border-color: rgba(24, 25, 32, 0.1);
@@ -1441,6 +1471,8 @@ input[type=radio].visually-hidden {
 
 .form-elements__field-blocked-select1 {
   height: 50px;
+  width: 326px;
+  box-sizing: border-box;
   margin-bottom: 10px;
   border-style: solid;
   border-color: rgba(24, 25, 32, 0.1);
@@ -1457,12 +1489,14 @@ input[type=radio].visually-hidden {
 
 .form-elements__field-blocked-select2 {
   height: 50px;
+  width: 326px;
+  box-sizing: border-box;
   margin-bottom: 10px;
   border-style: solid;
   border-color: rgba(24, 25, 32, 0.1);
   transition: all 0.1s ease-in-out;
   cursor: pointer;
-  padding: 9px 50px 9px 15px;
+  padding: 9px 50px 9px 0;
   font-size: 17px;
   line-height: 25px;
   background: url(../img/keyboard.svg) top 50% right 10px no-repeat;
@@ -1479,6 +1513,121 @@ input[type=radio].visually-hidden {
 .form-elements__field-blocked-select2:disabled {
   opacity: 0.5;
   cursor: not-allowed;
+}
+
+.field-multiple-select1__item-container {
+  display: flex;
+  flex-wrap: wrap;
+  min-height: 50px;
+  width: 326px;
+  box-sizing: border-box;
+  box-sizing: border-box;
+  border: 1px solid rgba(24, 25, 32, 0.1);
+  transition: all 0.1s ease-in-out;
+  cursor: pointer;
+  padding: 9px 50px 9px 15px;
+  font-size: 17px;
+  line-height: 25px;
+  background: url(../img/keyboard.svg) top 50% right 10px no-repeat;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.field-multiple-select1__item {
+  position: relative;
+  vertical-align: center;
+  padding: 0 30px 0 0;
+  margin-right: 10px;
+  color: #222;
+  font-size: 17px;
+  line-height: 30px;
+}
+
+.field-multiple-select1__item::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/not.svg);
+  background-size: 15px;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.3;
+}
+
+.field-multiple-select1__item:hover::after {
+  opacity: 0.5;
+}
+
+.field-multiple-select1__list {
+  width: 100%;
+  height: 200px;
+  box-sizing: border-box;
+  border: 1px solid rgba(24, 25, 32, 0.1);
+}
+
+.field-multiple-select1__list-item {
+  padding: 10px 15px;
+  font-size: 17px;
+  line-height: 25px;
+  color: #222;
+}
+
+.field-multiple-select2__item-container {
+  display: flex;
+  justify-content: space-between;
+  height: 50px;
+  width: 326px;
+  box-sizing: border-box;
+  border-bottom: 1px solid rgba(24, 25, 32, 0.1);
+  transition: all 0.1s ease-in-out;
+  cursor: pointer;
+  padding: 10px 50px 9px 0;
+  font-size: 17px;
+  line-height: 25px;
+  background: url(../img/keyboard.svg) top 50% right 10px no-repeat;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.field-multiple-select2__item {
+  vertical-align: center;
+  position: relative;
+  padding: 0 30px 0 0;
+  margin-right: 5px;
+  color: #222;
+  font-size: 17px;
+  line-height: 30px;
+}
+
+.field-multiple-select2__item::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/not.svg);
+  background-size: 15px;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.3;
+}
+
+.field-multiple-select2__item:hover::after {
+  opacity: 0.5;
+}
+
+.form-elements__field-multiple-select1:hover {
+  border-color: rgba(24, 25, 32, 0.2);
+}
+
+.form-elements__field-multiple-select2:hover {
+  border-color: rgba(24, 25, 32, 0.2);
 }
 
 .form-elements__button-style {
