--- a/css/style.scss
+++ b/css/style.scss
@@ -169,9 +169,9 @@ input[type="radio"].visually-hidden {
 
 .typography__main {
       width: 100%;
+      box-sizing: border-box;
       position: relative;
-      margin-left: 250px;
-      padding: 80px 30px;
+      padding: 80px 30px 80px 280px;
 }
 
 .typography__main-container {
@@ -525,8 +525,7 @@ input[type="radio"].visually-hidden {
       width: 100%;
       box-sizing: border-box;
       position: relative;
-      margin-left: 250px;
-      padding: 80px 30px;
+      padding: 80px 30px 80px 280px;
 }
 
 .form-elements__main-container {
@@ -1470,6 +1469,7 @@ input[type="radio"].visually-hidden {
       -webkit-appearance: none;
       -moz-appearance: none;
       appearance: none;
+      outline: none;
 
 }
 
@@ -1489,13 +1489,16 @@ input[type="radio"].visually-hidden {
       -webkit-appearance: none;
       -moz-appearance: none;
       appearance: none;
+      outline: none;
 }
 
-.form-elements__field-ordinary-select1:hover {
+.form-elements__field-ordinary-select1:hover,
+.form-elements__field-ordinary-select1:focus {
       border-color: rgba(24, 25, 32, .2);
 }
 
-.form-elements__field-ordinary-select2:hover {
+.form-elements__field-ordinary-select2:hover,
+.form-elements__field-ordinary-select2:focus {
       border-color: rgba(24, 25, 32, .2);
 }
 
@@ -1515,6 +1518,7 @@ input[type="radio"].visually-hidden {
       -webkit-appearance: none;
       -moz-appearance: none;
       appearance: none;
+      outline: none;
 }
 
 .form-elements__field-icon-select2 {
@@ -1532,15 +1536,18 @@ input[type="radio"].visually-hidden {
       -webkit-appearance: none;
       -moz-appearance: none;
       appearance: none;
+      outline: none;
 }
 
 
 
-.form-elements__field-icon-select1:hover {
+.form-elements__field-icon-select1:hover,
+.form-elements__field-icon-select1:focus {
       border-color: rgba(24, 25, 32, .2);
 }
 
-.form-elements__field-icon-select2:hover {
+.form-elements__field-icon-select2:hover,
+.form-elements__field-icon-select2:focus {
       border-color: rgba(24, 25, 32, .2);
 }
 
@@ -3549,8 +3556,7 @@ input[type="radio"].visually-hidden {
       width: 100%;
       box-sizing: border-box;
       position: relative;
-      margin-left: 250px;
-      padding: 80px 30px;
+      padding: 80px 30px 80px 280px;
 }
 
 .modal-map__main-container {
@@ -4245,8 +4251,7 @@ input[type="radio"].visually-hidden {
       width: 100%;
       box-sizing: border-box;
       position: relative;
-      margin-left: 250px;
-      padding: 80px 30px;
+      padding: 80px 30px 80px 280px;
 }
 
 .blocks__main-container {
@@ -5568,8 +5573,7 @@ input[type="radio"].visually-hidden {
       width: 100%;
       box-sizing: border-box;
       position: relative;
-      margin-left: 250px;
-      padding: 80px 30px;
+      padding: 80px 30px 80px 280px;
 }
 
 .components__main-container {
@@ -6315,9 +6319,9 @@ input[type="radio"].visually-hidden {
 
 .icon__main {
       width: 100%;
+      box-sizing: border-box;
       position: relative;
-      margin-left: 250px;
-      padding: 80px 30px;
+      padding: 80px 30px 80px 280px;
 }
 
 .icon__main-container {
