--- a/css/style.css
+++ b/css/style.css
@@ -2191,6 +2191,328 @@ input[type=radio].visually-hidden {
   opacity: 0.75;
 }
 
+.form-elements__button-dropdown1-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-elements__button-dropdown1 {
+  position: relative;
+  min-height: 50px;
+  box-sizing: border-box;
+  padding: 10px 60px 10px 20px;
+  margin-bottom: 10px;
+  border-radius: 25px;
+  background-color: #2d52da;
+  transition: all 0.1s ease-in-out;
+  color: #fff;
+  line-height: 30px;
+  cursor: pointer;
+  font-size: 17px;
+  outline: none;
+}
+
+.form-elements__button-dropdown1::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/keyboard.svg);
+  background-size: 30px;
+  background-repeat: no-repeat;
+}
+
+.form-elements__button-dropdown1:hover,
+.form-elements__button-dropdown1:focus {
+  background-color: #294bc7;
+}
+
+.button-dropdown1__list-wrapper {
+  width: 100%;
+  position: relative;
+  display: none;
+}
+
+.button-dropdown1__list {
+  padding: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200px;
+  box-sizing: border-box;
+  border: 1px solid rgba(24, 25, 32, 0.1);
+  background-color: #ffffff;
+  overflow: auto;
+}
+
+.button-dropdown1__list-item {
+  display: block;
+  padding: 10px 15px;
+  font-size: 17px;
+  line-height: 25px;
+  color: #222;
+}
+
+.button-dropdown1__list-item:hover,
+.button-dropdown1__list-item:focus {
+  background-color: rgba(45, 82, 218, 0.05);
+}
+
+.button-dropdown1__list-item--curent {
+  color: #2d52da;
+}
+
+.button-dropdown1__list-open {
+  display: block;
+  width: 100%;
+  position: relative;
+}
+
+.form-elements__button-dropdown2-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-elements__button-dropdown2 {
+  position: relative;
+  min-height: 50px;
+  padding: 9px 59px 9px 19px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+  border: 1px solid #2d52da;
+  border-radius: 25px;
+  transition: all 0.1s ease-in-out;
+  color: #2d52da;
+  font-size: 17px;
+  line-height: 30px;
+  cursor: pointer;
+  outline: none;
+}
+
+.form-elements__button-dropdown2::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/keyboard.svg);
+  background-size: 30px;
+  background-repeat: no-repeat;
+}
+
+.form-elements__button-dropdown2:hover,
+.form-elements__button-dropdown2:focus {
+  opacity: 0.75;
+}
+
+.button-dropdown2__list-wrapper {
+  width: 100%;
+  position: relative;
+  display: none;
+}
+
+.button-dropdown2__list {
+  padding: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200px;
+  box-sizing: border-box;
+  border: 1px solid rgba(24, 25, 32, 0.1);
+  background-color: #ffffff;
+  overflow: auto;
+}
+
+.button-dropdown2__list-item {
+  display: block;
+  padding: 10px 15px;
+  font-size: 17px;
+  line-height: 25px;
+  color: #222;
+}
+
+.button-dropdown2__list-item:hover,
+.button-dropdown2__list-item:focus {
+  background-color: rgba(45, 82, 218, 0.05);
+}
+
+.button-dropdown2__list-item--curent {
+  color: #2d52da;
+}
+
+.button-dropdown2__list-open {
+  display: block;
+  width: 100%;
+  position: relative;
+}
+
+.form-elements__button-icondropdown1-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-elements__button-icondropdown1 {
+  position: relative;
+  height: 50px;
+  width: 50px;
+  box-sizing: border-box;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 25px;
+  background-color: #2d52da;
+  transition: all 0.1s ease-in-out;
+  color: #fff;
+  line-height: 30px;
+  cursor: pointer;
+  font-size: 17px;
+  outline: none;
+}
+
+.form-elements__button-icondropdown1::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/keyboard.svg);
+  background-size: 30px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.form-elements__button-icondropdown1:hover,
+.form-elements__button-icondropdown1:focus {
+  background-color: #294bc7;
+}
+
+.button-icondropdown1__list-wrapper {
+  width: 120px;
+  position: relative;
+  display: none;
+}
+
+.button-icondropdown1__list {
+  padding: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200px;
+  box-sizing: border-box;
+  border: 1px solid rgba(24, 25, 32, 0.1);
+  background-color: #ffffff;
+  overflow: auto;
+}
+
+.button-icondropdown1__list-item {
+  display: block;
+  padding: 10px 15px;
+  font-size: 17px;
+  line-height: 25px;
+  color: #222;
+}
+
+.button-icondropdown1__list-item:hover,
+.button-icondropdown1__list-item:focus {
+  background-color: rgba(45, 82, 218, 0.05);
+}
+
+.button-icondropdown1__list-item--curent {
+  color: #2d52da;
+}
+
+.button-icondropdown1__list-open {
+  display: block;
+  position: relative;
+}
+
+.form-elements__button-icondropdown2-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-elements__button-icondropdown2 {
+  position: relative;
+  height: 50px;
+  width: 50px;
+  padding: 9px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+  border: 1px solid #2d52da;
+  border-radius: 25px;
+  transition: all 0.1s ease-in-out;
+  color: #2d52da;
+  font-size: 17px;
+  line-height: 30px;
+  cursor: pointer;
+  outline: none;
+}
+
+.form-elements__button-icondropdown2::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/keyboard.svg);
+  background-size: 30px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.form-elements__button-icondropdown2:hover,
+.form-elements__button-icondropdown2:focus {
+  opacity: 0.75;
+}
+
+.button-icondropdown2__list-wrapper {
+  width: 120px;
+  position: relative;
+  display: none;
+}
+
+.button-icondropdown2__list {
+  padding: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200px;
+  box-sizing: border-box;
+  border: 1px solid rgba(24, 25, 32, 0.1);
+  background-color: #ffffff;
+  overflow: auto;
+}
+
+.button-icondropdown2__list-item {
+  display: block;
+  padding: 10px 15px;
+  font-size: 17px;
+  line-height: 25px;
+  color: #222;
+}
+
+.button-icondropdown2__list-item:hover,
+.button-icondropdown2__list-item:focus {
+  background-color: rgba(45, 82, 218, 0.05);
+}
+
+.button-icondropdown2__list-item--curent {
+  color: #2d52da;
+}
+
+.button-icondropdown2__list-open {
+  display: block;
+  position: relative;
+}
+
 .form-elements__button-full1 {
   width: 100%;
   box-sizing: border-box;
