начала вносить цвета в переменные

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,9 +1,20 @@
-$color-green1: #00865B;
-$color-green2: #2AA275;
-$color-green2: #18D379;
-$color-green3: #DCF4E8;
-$color-green3: #E7F1ED;
-$color-green3: #F6FBF9;
+$color-black1: rgba(24, 25, 32, 1);
+$color-white1: rgba(255, 255, 255, 1);
+$color-white2: rgba(243, 243, 244);
+$color-gray1: rgba(24, 25, 32, 0.5);
+$color-gray2:rgba(24, 25, 32, 0.2);
+$color-gray3:rgba(24, 25, 32, 0.1);
+$color-gray3: rgba(24, 25, 32, 0.05);
+$color-blue1: rgba(45, 82, 218, 1);
+$color-blue2: rgba(45, 82, 218, 0.75);
+$color-blue3:rgb(41, 75, 199, 1);
+$color-green1: rgba(15, 153, 94);
+$color-green2: rgba(15, 153, 94, 0.1);
+$color-yellow1: rgba(248, 181, 43, 0.1);
+$color-yellow2: rgba(248, 181, 43, 0.2);
+$color-red1: rgba(234, 77, 71, 1);
+$color-red2: rgba(234, 77, 71, 0.1);;
+$color-red3: rgba(213, 70, 65, 1);
 
 
 
