--- a/css/style.scss
+++ b/css/style.scss
@@ -195,7 +195,7 @@ input[type="radio"].visually-hidden {
 
 .typography__main-container {
       width: 1039px;
-      margin: 0 auto;
+      margin: 0;
       padding: 0;
 }
 
@@ -276,7 +276,7 @@ input[type="radio"].visually-hidden {
       padding: 0 15px 0 0;
       font-size: 20px;
       line-height: 30px;
-      color: $color-gray3;
+      color: $color-gray1;
 }
 
 .typography__tittle-h1 {
@@ -351,7 +351,7 @@ input[type="radio"].visually-hidden {
       padding: 0 15px 0 0;
       font-size: 20px;
       line-height: 30px;
-      color: $color-gray3;
+      color: $color-gray1;
 }
 
 .typography__text-subtitle {
@@ -421,7 +421,7 @@ input[type="radio"].visually-hidden {
       padding: 0 15px 0 0;
       font-size: 20px;
       line-height: 30px;
-      color: color-gray1;
+      color: $color-gray1;
 }
 
 .typography__tech-link {
@@ -549,7 +549,7 @@ input[type="radio"].visually-hidden {
 
 .form-elements__main-container {
       width: 1039px;
-      margin: 0 auto;
+      margin: 0;
       padding: 0;
 }
 
@@ -570,7 +570,6 @@ input[type="radio"].visually-hidden {
       width: 683px;
       font-size: 90px;
       line-height: 90px;
-      // letter-spacing: -2px;
       font-weight: 700;
       margin-bottom: 30px;
 }
@@ -601,6 +600,8 @@ input[type="radio"].visually-hidden {
       font-weight: 400;
       margin-bottom: 30px;
 }
+
+// инпуты
 
 .form-elements__field-style-ordinary {
       box-sizing: border-box;
@@ -803,6 +804,18 @@ input[type="radio"].visually-hidden {
       line-height: 25px;
 }
 
+.form-elements__field-success-input1:hover {
+      border-color: $color-green2;
+}
+
+.form-elements__field-success-input1:focus {
+      outline: none;
+      padding-bottom: 8px;
+      border-color: $color-green1;
+      border-bottom-color: $color-green1;
+      border-bottom-width: 2px;
+}
+
 .form-elements__field-success-input2 {
       box-sizing: border-box;
       border: none;
@@ -817,21 +830,11 @@ input[type="radio"].visually-hidden {
       line-height: 25px;
 }
 
-// .form-elements__field-success-input1:hover {
-//       border-color: $color-gray2;
-// }
 
-// .form-elements__field-success-input2:hover {
-//       border-color: $color-gray2;
-// }
-
-.form-elements__field-success-input1:focus {
-      outline: none;
-      padding-bottom: 8px;
-      border-color: $color-green1;
-      border-bottom-color: $color-green1;
-      border-bottom-width: 2px;
+.form-elements__field-success-input2:hover {
+      border-color: $color-green2;
 }
+
 
 .form-elements__field-success-input2:focus {
       outline: none;
@@ -878,6 +881,18 @@ input[type="radio"].visually-hidden {
       line-height: 25px;
 }
 
+.form-elements__field-warning-input1:hover {
+      border-color: $color-yellow2;
+}
+
+.form-elements__field-warning-input1:focus {
+      outline: none;
+      padding-bottom: 8px;
+      border-color: $color-yellow1;
+      border-bottom-color: $color-yellow1;
+      border-bottom-width: 2px;
+}
+
 .form-elements__field-warning-input2 {
       box-sizing: border-box;
       border: none;
@@ -892,20 +907,10 @@ input[type="radio"].visually-hidden {
       line-height: 25px;
 }
 
-// .form-elements__field-warning-input1:hover {
-//       border-color: $color-gray2;
-// }
 
-// .form-elements__field-warning-input2:hover {
-//       border-color: $color-gray2;
-// }
 
-.form-elements__field-warning-input1:focus {
-      outline: none;
-      padding-bottom: 8px;
-      border-color: $color-yellow1;
-      border-bottom-color: $color-yellow1;
-      border-bottom-width: 2px;
+.form-elements__field-warning-input2:hover {
+      border-color: $color-yellow2;
 }
 
 .form-elements__field-warning-input2:focus {
@@ -952,6 +957,19 @@ input[type="radio"].visually-hidden {
       line-height: 25px;
 }
 
+.form-elements__field-error-input1:hover {
+      border-color: $color-red2;
+}
+
+.form-elements__field-error-input1:focus {
+      outline: none;
+      padding-bottom: 8px;
+      border-color: $color-red1;
+      border-bottom-color: $color-red1;
+      border-bottom-width: 2px;
+}
+
+
 .form-elements__field-error-input2 {
       box-sizing: border-box;
       border: none;
@@ -967,21 +985,11 @@ input[type="radio"].visually-hidden {
 
 }
 
-// .form-elements__field-error-input1:hover {
-//       border-color: $color-gray2;
-// }
 
-// .form-elements__field-error-input2:hover {
-//       border-color: $color-gray2;
-// }
-
-.form-elements__field-error-input1:focus {
-      outline: none;
-      padding-bottom: 8px;
-      border-color: $color-red1;
-      border-bottom-color: $color-red1;
-      border-bottom-width: 2px;
+.form-elements__field-error-input2:hover {
+      border-color: $color-red2;
 }
+
 
 .form-elements__field-error-input2:focus {
       outline: none;
@@ -1033,11 +1041,6 @@ input[type="radio"].visually-hidden {
       background-color: $color-white1;
 }
 
-.form-elements__field-blocked-input2:disabled {
-      opacity: .5;
-      cursor: not-allowed;
-      background-color: $color-white1;
-}
 
 .form-elements__field-blocked-input2 {
       box-sizing: border-box;
@@ -1051,6 +1054,12 @@ input[type="radio"].visually-hidden {
       border-radius: 1px;
       font-size: 17px;
       line-height: 25px;
+}
+
+.form-elements__field-blocked-input2:disabled {
+      opacity: .5;
+      cursor: not-allowed;
+      background-color: $color-white1;
 }
 
 .form-elements__field-icon {
@@ -1088,6 +1097,16 @@ input[type="radio"].visually-hidden {
       background-repeat: no-repeat;
 }
 
+.form-elements__field-icon-input1:hover {
+      border-color: $color-gray2;
+}
+
+.form-elements__field-icon-input1:focus {
+      outline: none;
+      border-color: $color-gray2;
+      border-bottom: 2px solid $color-blue1;
+}
+
 .form-elements__field-icon-input2 {
       box-sizing: border-box;
       border: none;
@@ -1105,20 +1124,12 @@ input[type="radio"].visually-hidden {
       background-repeat: no-repeat;
 }
 
-.form-elements__field-icon-input1:hover {
-      border-color: $color-gray2;
 
-}
 
 .form-elements__field-icon-input2:hover {
       border-color: $color-gray2;
 }
 
-.form-elements__field-icon-input1:focus {
-      outline: none;
-      border-color: $color-gray2;
-      border-bottom: 2px solid $color-blue1;
-}
 
 .form-elements__field-icon-input2:focus {
       outline: none;
@@ -1293,6 +1304,19 @@ input[type="radio"].visually-hidden {
       line-height: 25px;
 }
 
+.form-elements__field-text-textarea1:hover {
+      border-color: $color-gray2;
+}
+
+.form-elements__field-text-textarea1:focus {
+      outline: none;
+      padding-bottom: 8px;
+      border-color: $color-gray2;
+      border-bottom-color: $color-blue1;
+      border-bottom-width: 2px;
+}
+
+
 .form-elements__field-text-textarea2 {
       box-sizing: border-box;
       border: none;
@@ -1307,21 +1331,11 @@ input[type="radio"].visually-hidden {
       line-height: 25px;
 }
 
-.form-elements__field-text-textarea1:hover {
-      border-color: $color-gray2;
-}
 
 .form-elements__field-text-textarea2:hover {
       border-color: $color-gray2;
 }
 
-.form-elements__field-text-textarea1:focus {
-      outline: none;
-      padding-bottom: 8px;
-      border-color: $color-gray2;
-      border-bottom-color: $color-blue1;
-      border-bottom-width: 2px;
-}
 
 .form-elements__field-text-textarea2:focus {
       outline: none;
@@ -1351,6 +1365,8 @@ input[type="radio"].visually-hidden {
       opacity: 0.3;
 }
 
+
+// селекты
 .form-elements__select-style {
       margin-bottom: 40px;
 }
@@ -1490,6 +1506,11 @@ input[type="radio"].visually-hidden {
 
 }
 
+.form-elements__field-ordinary-select1:hover,
+.form-elements__field-ordinary-select1:focus {
+      border-color: $color-gray2;
+}
+
 .form-elements__field-ordinary-select2 {
       height: 50px;
       width: 326px;
@@ -1509,10 +1530,7 @@ input[type="radio"].visually-hidden {
       outline: none;
 }
 
-.form-elements__field-ordinary-select1:hover,
-.form-elements__field-ordinary-select1:focus {
-      border-color: $color-gray2;
-}
+
 
 .form-elements__field-ordinary-select2:hover,
 .form-elements__field-ordinary-select2:focus {
@@ -1538,6 +1556,11 @@ input[type="radio"].visually-hidden {
       outline: none;
 }
 
+.form-elements__field-icon-select1:hover,
+.form-elements__field-icon-select1:focus {
+      border-color: $color-gray2;
+}
+
 .form-elements__field-icon-select2 {
       height: 50px;
       width: 326px;
@@ -1556,12 +1579,6 @@ input[type="radio"].visually-hidden {
       outline: none;
 }
 
-
-
-.form-elements__field-icon-select1:hover,
-.form-elements__field-icon-select1:focus {
-      border-color: $color-gray2;
-}
 
 .form-elements__field-icon-select2:hover,
 .form-elements__field-icon-select2:focus {
@@ -1586,6 +1603,11 @@ input[type="radio"].visually-hidden {
       appearance: none;
 }
 
+.form-elements__field-blocked-select1:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+}
+
 .form-elements__field-blocked-select2 {
       height: 50px;
       width: 326px;
@@ -1604,10 +1626,6 @@ input[type="radio"].visually-hidden {
       appearance: none;
 }
 
-.form-elements__field-blocked-select1:disabled {
-      opacity: .5;
-      cursor: not-allowed;
-}
 
 .form-elements__field-blocked-select2:disabled {
       opacity: .5;
@@ -1812,7 +1830,7 @@ input[type="radio"].visually-hidden {
 
 
 
-
+// кнопки
 
 .form-elements__button-style {
       margin-bottom: 40px;
@@ -5252,11 +5270,6 @@ input[type="radio"].visually-hidden {
       transition: all is ease-in 0.1s;
 }
 
-
-// .more-photo__slider--noactive {
-//       opacity: 0.3;
-// }
-
 .more-photo__slider-img {
       width: 1039px;
       height: 692px;
@@ -5907,7 +5920,7 @@ input[type="radio"].visually-hidden {
       padding: 5px 20px;
       font-size: 14px;
       line-height: 20px;
-      background-color: $color-gray1;
+      background-color: $color-gray8;
       color: $color-gray1;
 }
 
@@ -6168,6 +6181,7 @@ input[type="radio"].visually-hidden {
       line-height: 30px;
       cursor: pointer;
       color: $color-black2;
+      outline: none;
 }
 
 .tab-ordinary__wrapper1-button:hover {
@@ -6178,7 +6192,6 @@ input[type="radio"].visually-hidden {
       padding-bottom: 8px;
       border-bottom: 2px solid $color-blue1;
       color: $color-blue1;
-      outline: none;
       transition: all .1s ease-in-out;
 }
 
@@ -6186,7 +6199,6 @@ input[type="radio"].visually-hidden {
       padding-bottom: 8px;
       border-bottom: 2px solid $color-blue1;
       color: $color-blue1;
-      outline: none;
       transition: all .1s ease-in-out;
 }
 
@@ -6205,6 +6217,7 @@ input[type="radio"].visually-hidden {
       line-height: 30px;
       cursor: pointer;
       color: $color-black2;
+      outline: none;
 }
 
 .tab-ordinary__wrapper2-button:hover {
@@ -6215,7 +6228,6 @@ input[type="radio"].visually-hidden {
       padding-bottom: 8px;
       border-bottom: 2px solid $color-blue1;
       color: $color-blue1;
-      outline: none;
       transition: all .1s ease-in-out;
 }
 
@@ -6223,7 +6235,6 @@ input[type="radio"].visually-hidden {
       padding-bottom: 8px;
       border-bottom: 2px solid $color-blue1;
       color: $color-blue1;
-      outline: none;
       transition: all .1s ease-in-out;
 }
 
@@ -6248,6 +6259,7 @@ input[type="radio"].visually-hidden {
       text-transform: uppercase;
       cursor: pointer;
       color: $color-black2;
+      outline: none;
 }
 
 .tab-small__wrapper1-button:hover {
@@ -6258,7 +6270,6 @@ input[type="radio"].visually-hidden {
       padding-bottom: 8px;
       border-bottom: 2px solid $color-blue1;
       color: $color-blue1;
-      outline: none;
       transition: all .1s ease-in-out;
 }
 
@@ -6266,7 +6277,6 @@ input[type="radio"].visually-hidden {
       padding-bottom: 8px;
       border-bottom: 2px solid $color-blue1;
       color: $color-blue1;
-      outline: none;
       transition: all .1s ease-in-out;
 }
 
@@ -6287,6 +6297,7 @@ input[type="radio"].visually-hidden {
       text-transform: uppercase;
       cursor: pointer;
       color: $color-black2;
+      outline: none;
 }
 
 .tab-small__wrapper2-button:hover {
@@ -6297,7 +6308,6 @@ input[type="radio"].visually-hidden {
       padding-bottom: 8px;
       border-bottom: 2px solid $color-blue1;
       color: $color-blue1;
-      outline: none;
       transition: all .1s ease-in-out;
 }
 
@@ -6305,7 +6315,6 @@ input[type="radio"].visually-hidden {
       padding-bottom: 8px;
       border-bottom: 2px solid $color-blue1;
       color: $color-blue1;
-      outline: none;
       transition: all .1s ease-in-out;
 }
 
@@ -6371,11 +6380,13 @@ input[type="radio"].visually-hidden {
       background-color: $color-blue1;
       transition: all .1s ease-in-out;
       color: $color-gray4;
+      outline: none;
 }
 
 
-.tag-ordinary__wrapper1-button:focus,
-.tag-ordinary__wrapper1-button:hover {
+
+.tag-ordinary__wrapper1-button:hover,
+.tag-ordinary__wrapper1-button:focus {
       opacity: 0.75;
 }
 
@@ -6399,12 +6410,12 @@ input[type="radio"].visually-hidden {
       letter-spacing: 1.5px;
       text-transform: uppercase;
       cursor: pointer;
+      outline: none;
 }
 
 
-
-.tag-ordinary__wrapper2-button:focus,
-.tag-ordinary__wrapper2-button:hover {
+.tag-ordinary__wrapper2-button:hover,
+.tag-ordinary__wrapper2-button:focus {
       opacity: 0.75;
 }
 
@@ -6429,11 +6440,12 @@ input[type="radio"].visually-hidden {
       transition: all .1s ease-in-out;
       color: $color-gray4;
       border-radius: 15px;
+      outline: none;
 }
 
 
-.tag-round__wrapper1-button:focus,
-.tag-round__wrapper1-button:hover {
+.tag-round__wrapper1-button:hover,
+.tag-round__wrapper1-button:focus {
       opacity: 0.75;
 }
 
@@ -6458,12 +6470,13 @@ input[type="radio"].visually-hidden {
       letter-spacing: 1.5px;
       text-transform: uppercase;
       cursor: pointer;
+      outline: none;
 }
 
 
 
-.tag-round__wrapper2-button:focus,
-.tag-round__wrapper2-button:hover {
+.tag-round__wrapper2-button:hover,
+.tag-round__wrapper2-button:focus {
       opacity: 0.75;
 }
 
