--- a/css/style.scss
+++ b/css/style.scss
@@ -3935,7 +3935,7 @@ input[type="radio"].visually-hidden {
 
 .modal-map__main-container {
       width: 1039px;
-      margin: 0 auto;
+      margin: 0;
       padding: 0;
 }
 
@@ -4626,7 +4626,7 @@ input[type="radio"].visually-hidden {
 
 .blocks__main-container {
       width: 1039px;
-      margin: 0 auto;
+      margin: 0;
       padding: 0;
 }
 
@@ -5942,7 +5942,7 @@ input[type="radio"].visually-hidden {
 
 .components__main-container {
       width: 1039px;
-      margin: 0 auto;
+      margin: 0;
       padding: 0;
 }
 
@@ -6690,7 +6690,7 @@ input[type="radio"].visually-hidden {
 
 .icon__main-container {
       width: 1039px;
-      margin: 0 auto;
+      margin: 0;
       padding: 0;
 }
 
